search modal popup z-index problem fixed

--- a/blocks/search-popup-block/src/4.plugins/_search-popup.scss
+++ b/blocks/search-popup-block/src/4.plugins/_search-popup.scss
@@ -102,7 +102,7 @@
 			height: 100%;
 			opacity: 1;
 			visibility: visible;
-			z-index: 1030;
+			z-index: 0;
             overflow-y: hidden;
 		}
 	}
